syntax = "proto3";

option java_package = "com.learn.grpc.stubs";
option java_multiple_files = true;

service AddToCartService {
  rpc addToCart(AddToCartRequest) returns (AddToCartResponse);
}

message AddToCartRequest {
  int32 id = 1;
  int32 product_id = 2;
  string product_name = 3;
  int32 quantity = 4;
}

message AddToCartResponse {
  string product_name = 1;
}